Further logical (and one real) markup fix.

--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -118,8 +118,9 @@ It should be noted in the comments that the error recovery fails.</p>
 
 <table border="1" cellpadding="4" summary="States">
 
-<tr align="center" valign="top">
-<th><h2 id="status">STATUS</h2></th> <th><h2>RESOLUTION</h2></th>
+<tr align="center">
+<th><h3 id="status">Status</h3></th>
+<th><h3 id="resolution">Resolution</h3></th>
 </tr>
 
 <tr valign="top">
@@ -168,7 +169,7 @@ or <b>RESOLVED</b>.</dd>
 <td>
 No resolution yet. All bugs which are in one of these "open" states
 have the resolution set to blank. All other bugs
-will be marked with one of the following resolutions.</dd>
+will be marked with one of the following resolutions.
 </td>
 </tr>
 
@@ -213,9 +214,12 @@ now, file it.</dd>
 </td>
 </tr>
 </table>
-<table border="1" cellpadding="4">
-<tr><td><h2><a name="severity">Severity</a></h2>
-This field describes the impact of a bug. 
+
+<table border="1" cellpadding="4"><tr>
+<td valign="top">
+
+<h3 align="center" id="severity">Severity</a></h3>
+This field describes the impact of a bug.
 <table>
 <tr><th>Blocker</th><td>Blocks development and/or testing work </td></tr>
 <tr><th>Critical</th><td>crashes, loss of data, severe memory leak </td></tr>
@@ -226,20 +230,24 @@ easy workaround is present </td></tr>
 misaligned text</td></tr> 
 <tr><th>Enhancement</th><td>Request for enhancement</td></tr>
 </table> 
-</td><td>
-<h2><a name="priority">Priority</a></h2>
+
+</td><td valign="top">
+
+<h3 align="center" id="priority">Priority</a></h3>
 This field describes the importance and order in which a bug should be
-fixed.  This field is utilized by the programmers/engineers to
+fixed.  It is utilized by the programmers/engineers to
 prioritize their work to be done.  The available priorities are:
 
-<table>
+<table cellspacing="3">
 <tr><th>P1</th><td>Most important</td></tr>
-<tr><th>P2</th><td></td></tr>
+<tr><th>P2</th><td>More important</td></tr>
 <tr><th>P3</th><td></td></tr>
-<tr><th>P4</th><td></td></tr>
+<tr><th>P4</th><td>Less important</td></tr>
 <tr><th>P5</th><td>Least important</td></tr>
 </table>
-</td></tr></table>
+
+</td></tr>
+</table>
 
 </body>
 </html>
