Two final markup fixes.

--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -218,7 +218,7 @@ now, file it.</dd>
 <table border="1" cellpadding="4"><tr>
 <td valign="top">
 
-<h3 align="center" id="severity">Severity</a></h3>
+<h3 align="center" id="severity">Severity</h3>
 This field describes the impact of a bug.
 <table>
 <tr><th>Blocker</th><td>Blocks development and/or testing work </td></tr>
@@ -233,7 +233,7 @@ misaligned text</td></tr>
 
 </td><td valign="top">
 
-<h3 align="center" id="priority">Priority</a></h3>
+<h3 align="center" id="priority">Priority</h3>
 This field describes the importance and order in which a bug should be
 fixed.  It is utilized by the programmers/engineers to
 prioritize their work to be done.  The available priorities are:
