Avoid references to any specific bug-tracking system.

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -1,4 +1,4 @@
-<html>
+</html>
 
 <head>
 <title>GCC Projects</title>
@@ -923,9 +923,9 @@ particular case.</p>
 distribution.  Probably much of it is no longer relevant as of GCC 3.0
 (the file hadn't changed since GCC 2.0), but some might be.  Someone
 should go through it, identifying what is and isn't relevant, adding
-anything applicable to current GCC (and describing a bug) to GNATS and
-sending patches to gcc-patches to remove from the list entries that no
-longer apply or have been entered in GNATS.</p>
+anything applicable to current GCC (and describing a bug) to our
+<a href="../bugs.html">bug-tracking system</a> and sending patches to
+gcc-patches to remove such analysed entries from the list.</p>
 
 <ol>
 
