--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -265,7 +265,7 @@ stages of development, branch points, and releases:</p>
        |                                   GCC 3.2.2 release (Feb 05 2003)
        |                                                \
        |                                                 v
-       |                                   GCC 3.2.3 release (April 15 2003)
+       |                                   GCC 3.2.3 release (April 22 2003)
        v
   GCC 3.3 Stage 2 (ends Aug 15 2002)
        |
@@ -275,12 +275,17 @@ stages of development, branch points, and releases:</p>
        v
        +-- GCC 3.3 branch created ------+
        |              (Dec 14 2002)      \
-       :                                  v
-       :                                   GCC 3.3 release (...)
-       :                                    \
-                                             v 
-                                           GCC 3.3.1 release (...)
-
+       |                                  v
+       |                                   GCC 3.3 release (May 13 2003)
+       |                                    \
+       v                                     v 
+  GCC 3.4 Stage 1 (ends ... )              GCC 3.3.1 release (...)
+       |                                      \
+       v                                       v
+  GCC 3.4 Stage 2 (ends ... )              GCC 3.3.2 release (...)
+       |                                        \
+       :                                         :
+       v                                          v
 </pre>
 
 <hr />
