New entries for GCC 3.3:
Bootstrap plus test results:

  sparc-sun-solaris2.8 (binutils 2.13.2.1)

Bootstrap:

  i686-pc-linux-gnu (Slackware 9.0, glibc 2.3.1, kernel 2.4.20)
  i686-pc-linux-gnu (SuSE 7.0, kernel 2.2.16)
  i686-pc-linux-gnu (SuSE 8.0, glibc 2.2.5, kernel 2.4.18)
  sh-unknown-linux-gnu (binutils 2.13.90, glibc 2.2.90, kernel 2.4.20)

Test results:

  arm-unknown-linux-gnu (Debian)
  i686-pc-linux-gnu
  ia64-unknown-linux-gnu (Debian)
  mips-sgi-irix6.2o32
  m68k-unknown-linux-gnu
  s390-ibm-linux-gnu (Debian)
  sparc-sun-solaris2.7
  sparc-sun-solaris2.8 (2)
  sparc-unknown-linux-gnu (Debian)

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -71,6 +71,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>arm-unknown-linux-gnu</td>
+<td>Debian</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01458.html">3.3</a>
+</td>
+</tr>
+
+<tr>
 <td>armv5l-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -184,6 +192,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01208.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01114.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01023.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01017.html">3.3</a>,
@@ -249,6 +258,30 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Slackware 9.0, glibc 2.3.1, kernel 2.4.20</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg02212.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE 7.0, kernel 2.2.16</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg02420.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE 8.0, glibc 2.2.5, kernel 2.4.18</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg02438.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SuSE 8.1, glibc 2.2.5, kernel 2.4.19</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01538.html">3.3</a>
@@ -272,10 +305,26 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>ia64-unknown-linux-gnu</td>
+<td>Debian</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01183.html">3.3</a>
+</td>
+</tr>
+
+<tr>
 <td>mips-sgi-irix6.2</td>
 <td>test runs for -mabi=64 and -mips4</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00943.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>mips-sgi-irix6.2o32</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01527.html">3.3</a>
 </td>
 </tr>
 
@@ -298,8 +347,16 @@ Installing GCC: Final Installation</a>.</p>
 <tr>
 <td>m32r-unknown-elf</td>
 <td>host: i686-pc-linux-gnu</td>
+<td>Test results (with patches):
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01478.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>m68k-unknown-linux-gnu</td>
+<td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01153.html">3.3</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01184.html">3.3</a>
 </td>
 </tr>
 
@@ -351,6 +408,14 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>s390-ibm-linux-gnu</td>
+<td>Debian</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01356.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>s390-ibm-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01124.html">3.3</a>
@@ -362,6 +427,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01123.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>sh-unknown-linux-gnu</td>
+<td>binutils 2.13.90, glibc 2.2.90, kernel 2.4.20</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg02050.html">3.3</a>
 </td>
 </tr>
 
@@ -385,6 +458,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.7</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01119.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01111.html">3.3</a>
 </td>
 </tr>
@@ -401,8 +475,19 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01406.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01178.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00910.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.8</td>
+<td>binutils 2.13.2.1</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01928.html">3.3</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01247.html">3.3</a>
 </td>
 </tr>
 
@@ -412,6 +497,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01608.html">3.3</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01232.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00980.html">3.3</a>
 </td>
 </tr>
@@ -421,6 +507,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00929.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-unknown-linux-gnu</td>
+<td>Debian</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01357.html">3.3</a>
 </td>
 </tr>
 
