New entries for GCC 3.2.3:
Bootstrap:

  powerpc-ibm-aix4.2.1.0 (with tweaks)

Test results:

  i686-pc-linux-gnu
  sparc-sun-solaris2.8

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -440,7 +440,8 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00345.html">3.2.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01553.html">3.2.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01738.html">3.2.3</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01557.html">3.2.3</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg01557.html">3.2.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01288.html">3.2.3</a>
 </td>
 </tr>
 
@@ -993,6 +994,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-ibm-aix4.2.1.0</td>
+<td>&nbsp;</td>
+<td>Successful (with tweaks):
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg02228.html">3.2.3</a></td>
+</tr>
+
+<tr>
 <td>powerpc-ibm-aix4.3.2.0</td>
 <td>&nbsp;</td>
 <td>Successful:
@@ -1182,6 +1190,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>binutils 2.13.1</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01040.html">3.2.1</a></td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.8</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01231.html">3.2.3</a>
+</td>
 </tr>
 
 <tr>
