Add anchors for "Copyright Assignment" and "Submitting Patches".

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -27,7 +27,7 @@ well as requirements on code formatting.  Submissions which do not
 conform to the standards will be returned with a request to address
 any such problems.</p>
 
-<h2>Copyright Assignment</h2>
+<h2><a name="copyright">Copyright Assignment</a></h2>
 
 <p>Before we can accept code contributions from you, we need a
 copyright assignment form filled out and filed with the FSF.</p>
@@ -119,7 +119,7 @@ to it, because otherwise you cannot be sure that your patch will work
 correctly on its own.  Include all your new test cases in your
 testsuite run.</p>
 
-<h2>Submitting Patches</h2>
+<h2><a name="patches">Submitting Patches</a></h2>
 
 <p>Every patch must have several pieces of information before we can
 properly evaluate it:</p>
