Gnatsweb -> Bugzilla.  Simplify instructions.

--- a/htdocs/gnats.html
+++ b/htdocs/gnats.html
@@ -14,9 +14,7 @@ Before submitting a bug report, please read the <a
 href="bugs.html">general instructions</a>.</p>
 
 <p>The preferred way to submit a bug report is by means of the
-<a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;user=guest&amp;password=guest&amp;cmd=login">gnatsweb</a>
-interface.  Make sure you include an e-mail address, so we can inform
-you when the status of your report changes.</p>
+<a href="http://gcc.gnu.org/bugzilla/">web interface</a>.</p>
 
 <p>Another way is to use the <code>gccbug</code> program that is
 automatically installed with current versions of GCC, which submits the bug
