--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -73,7 +73,7 @@ names.
  
  <li>AVR
   <br />Manufacturer: Atmel
-  <br /><a href="http://www.atmel.com/atmel/products/prod23.htm">AVR Documentation</a>
+  <br /><a href="http://www.atmel.com/products/AVR/">AVR Documentation</a>
  </li>
  
  <li>c4x
