--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -71,21 +71,23 @@ to maintain and improve quality.</p>
 
 <hr />
 
+<!--
 <h2>Upcoming Events</h2>
 
 <dl>
-<dt><a href="http://www.gccsummit.org/">GCC Developers Summit</a></dt>
-<dd>This will
-provide the opportunity for GCC developers and enthusiasts to meet and
-discuss their work, with 20 technical presentations plus working group
-meetings and brainstorming sessions.
-The summit takes place May 25-27, 2003 in Ottawa.
-</dd>
 </dl>
+-->
 
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>May 27, 2003</b></dt>
+<dd>
+Proceedings and photographs of participants are available for the First
+Annual <a href="http://www.gccsummit.org/">GCC Developers' Summit</a>,
+which took place May 25-27, 2003.
+</dd>
 
 <dt><b>May 14, 2003</b></dt>
 <dd>
