Add notes to the branching and releasing instructions to generate bugzilla milestones for the dot release _after_ the immediate next, to allow for slipping bug reports if they can't be fixed in time for the upcoming next release.

--- a/htdocs/releasing.html
+++ b/htdocs/releasing.html
@@ -79,13 +79,15 @@ version.  This can be accomplished by choosing products, choosing gcc,
 and editing the versions.  Please do <strong>not</strong> delete old 
 versions.</li>
 
-<li>Create a new target milestone in Bugzilla corresponding to the new
-branch version.  This can be accomplished by choosing products,
-choosing gcc, and editing the target milestones.  Please do
-<strong>not</strong> delete old target milestones.</li>
+<li>Create a new target milestone in Bugzilla corresponding to the dot
+release after the immediate next (for example create a milestone for
+3.3.3 after releasing 3.3.1, so we can slip the milestone for PRs that
+can't be fixed in time for 3.3.2).  This can be accomplished by
+choosing products, choosing gcc, and editing the target milestones.
+Please do <strong>not</strong> delete old target milestones.</li>
 
 <li>Change all open bugs targeted at the just released milestone to be targeted
-at either the mainline version milestone, or the point-release milestone.
+at either the mainline version milestone, or the next point-release milestone.
 This can be accomplished by querying for all bugs targeted at the old
 milestone, choosing "Change several bugs at once" at the bottom of the
 buglist screen, choosing "check all" to select all bugs to change, 
