--- a/htdocs/branching.html
+++ b/htdocs/branching.html
@@ -72,6 +72,10 @@ mainline version.  This can be accomplished by choosing products,
 choosing gcc, and editing the milestones.  Please do <strong>not</strong>
 delete old target milestones.</li>
 
+<li>Create new target milestones in Bugzilla for the second dot
+release on the branch.  For example, when branching 3.4, create a
+milestone for 3.4.1 for PRs that can't be fixed in time for 3.4.0.</li>
+
 <li>Update the email parsing script to handle bugs against the new versions.
 The script is in CVS at <code>wwwdocs/bugzilla/contrib/bug_email.pl</code>. 
 Search for an existing version (like "3.3"), and update both places
