Take over the only piece of real information from bugzilla/bug_status.html that was not already duplicated in bugs/management.html. The former file should now just go away.

--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -140,6 +140,9 @@ now, file it.</dd>
 </tr>
 </table>
 
+<p>The following two fields describe how serious a bug is from a user's
+perspective (severity) and which priority we assign to it in fixing it:</p>
+
 <table border="1" cellpadding="4"><tr>
 <td valign="top">
 
@@ -175,6 +178,18 @@ prioritize their work to be done.  The available priorities are:
 
 </td></tr>
 </table>
+
+
+<h3><a name="assigned_to">Assigned To</a></h3>
+
+<p>This is the person in charge of resolving the bug.  Every time this
+field changes, the status changes to NEW to make it easy to see
+which new bugs have appeared on a person's list.</p>
+
+<p>The default status for queries is set to NEW, ASSIGNED and REOPENED. When
+searching for bugs that have been resolved or verified, remember to set the
+status field appropriately.</p>
+
 
 
 <h2>Procedures and Policies</h2>
