--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -141,7 +141,7 @@ three of which can be obtained from the output of <code>gcc -v</code>:
 <h3><a name="where">Where to post it</a></h3>
 
 <p>Please submit your bug report directly to the
-<a href="gnats.html">GCC GNATS bug database</a>.
+<a href="http://gcc.gnu.org/bugzilla/">GCC bug database</a>.
 Alternatively, you can use the <code>gccbug</code> script that mails your bug
 report to the bug database.
 Only if all this is absolutely impossible, mail all information to
