Do not provide a shortcut to the bug reporting system, so that users at least browse our short version of the instructions.

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -50,9 +50,7 @@
 
 <p>The main purpose of a bug report is to enable us to fix the bug. The
 most important prerequisite for this is that the report must be complete and
-self-contained, which we explain in detail below.
-Our preferred way of receiving bugs is via our
-<a href="gnats.html">online bug reporting system</a>.</p>
+self-contained, which we explain in detail below.</p>
 
 <p>Before you report a bug, please check the 
 <a href="#known">list of well-known bugs</a> and, <strong>if possible
