--- a/htdocs/simtest-howto.html
+++ b/htdocs/simtest-howto.html
@@ -48,7 +48,7 @@ cvs -d :pserver:anoncvs@subversions.gnu.org:/cvsroot/gcc co gcc
 cd ${TOP}
 cvs -d :pserver:anoncvs@sources.redhat.com:/cvs/src login
 # You will be prompted for a password; reply with "anoncvs".
-cvs -d :pserver:anoncvs@sources.redhat.com:/cvs/src binutils newlib dejagnu gdb
+cvs -d :pserver:anoncvs@sources.redhat.com:/cvs/src co binutils newlib dejagnu gdb
 </pre>
 
     <h3>Update CVS trees</h3>
@@ -76,7 +76,7 @@ CVSROOT=":pserver:anoncvs@subversions.gnu.org:/cvsroot/gcc" \
 
     <p>Create a tree that consists of all of the files from the GCC and
     binutils/gdb/newlib source trees (including several simulators in
-    <code>src/src/sim</code>), with the GCC files overriding the
+    <code>src/sim</code>), with the GCC files overriding the
     binutils/gdb/newlib files when there's a conflict.  It's done this
     way because the GCC files are the master copy.  To save on disk
     space, these commands actually make a tree of hard links rather
@@ -133,7 +133,7 @@ make check-gcc RUNTESTFLAGS=--target_board=arm-sim
     a patch you should compare your results with and without the patch.</p>
 
     <p>The target characteristic can help you determine which targets to
-    use to broaden the scope of your testing.  A CC0 target causes
+    use to broaden the scope of your testing.  A cc0 target causes
     significantly different code to be generated and can matter more
     than word size and endianness in terms of detecting new breakage.</p>
 
@@ -214,7 +214,7 @@ make check-gcc RUNTESTFLAGS=--target_board=arm-sim
 <tr valign="top">
  <td>mn10300-elf</td>
  <td>mn10300-sim</td>
- <td>CC0 target, little endian</td>
+ <td>cc0 target, little endian (obsolete after 3.3)</td>
  <td>
  <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00632.html">3.3 20030509 (prerelease)</a>
  <br />
@@ -269,7 +269,7 @@ make check-gcc RUNTESTFLAGS=--target_board=arm-sim
 <tr valign="top">
  <td>v850-elf</td>
  <td>v850-sim</td>
- <td>CC0 target, 32-bit word, little endian</td>
+ <td>cc0 target, 32-bit word, little endian</td>
  <td>
  <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg00978.html">3.2.3 20030415 (prerelease)</a>
  </td>
