--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -279,7 +279,7 @@ stages of development, branch points, and releases:</p>
        |                                   GCC 3.3 release (May 13 2003)
        |                                    \
        v                                     v 
-  GCC 3.4 Stage 1 (ends ... )              GCC 3.3.1 release (...)
+  GCC 3.4 Stage 1 (ends July 4 2003)       GCC 3.3.1 release (July 18 2003)
        |                                      \
        v                                       v
   GCC 3.4 Stage 2 (ends ... )              GCC 3.3.2 release (...)
