Crap, never edit after validating...

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -253,7 +253,7 @@ infrastructure is in place.</p>
 
 <ul>
 <li>Copy propagation[<a href="#morgan-98">3</a>]</li>
-<li>CCP (sparse Conditional Constant Propagation)[<a href="#wegman.ea-91">4</a>]
+<li>CCP (sparse Conditional Constant Propagation)[<a href="#wegman.ea-91">4</a>]</li>
 <li>DCE (Dead Code Elimination)[<a href="#morgan-98">3</a>]</li>
 <li>PRE (Partial Redundancy Elimination)[<a href="#chow.ea-97">5</a>]
     with strength reduction</li>
