Add new bootstrap entries for GCC 3.3:
  i686-pc-linux-gnu (Mandrake 9.1, glibc 2.3.1, kernel 2.4.21)
  i686-pc-linux-gnu (Red Hat 7.3, glibc 2.2.5, kernel 2.4.20)
  i686-pc-linux-gnu (SuSE 7.0, glibc 2.1.3, kernel 2.2.16)
  i686-pc-linux-gnu (SuSE 7.3, glibc 2.2.4, kernel 2.2.18)
  i686-pc-linux-gnu (SuSE 8.0, glibc 2.2.5, kernel 2.4.18)

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -220,11 +220,35 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Mandrake 8.2, glibc 2.2.4, kernel 2.4.18</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-06/msg00676.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Mandrake 9.1, glibc 2.3.1, kernel 2.4.21</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-06/msg00271.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.2, binutils 2.13.1, glibc 2.2.4, kernel 2.4.7</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01608.html">3.3</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00978.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.20</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-06/msg00430.html">3.3</a>
 </td>
 </tr>
 
@@ -266,9 +290,18 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>SuSE 7.0, kernel 2.2.16</td>
+<td>SuSE 7.0, glibc 2.1.3, kernel 2.2.16</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-06/msg00433.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg02420.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE 7.3, glibc 2.2.4, kernel 2.2.18</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-06/msg00431.html">3.3</a>
 </td>
 </tr>
 
@@ -276,6 +309,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>SuSE 8.0, glibc 2.2.5, kernel 2.4.18</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-06/msg00432.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg02438.html">3.3</a>
 </td>
 </tr>
