Add entry for 3.2.3:
  i586-pc-sco3.2v5.0.4 (SCO OpenServer 5.0.4, GNU as, native SCO ld)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -381,6 +381,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i586-pc-sco3.2v5.0.4</td>
+<td>SCO OpenServer 5.0.4, GNU as, native SCO ld</td>
+<td>Successful (with tweak):
+<a href="http://gcc.gnu.org/ml/gcc/2003-06/msg00944.html">3.2.3</a>
+</td>
+</tr>
+
+<tr>
 <td>i686-pc-cygwin</td>
 <td>&nbsp;</td>
 <td>Test results:
