Add Jeff Sturm and Andrew Haley.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -73,8 +73,10 @@ needed when submitting patches from the branch onto the mainline.</p>
 <a href="mailto:amacleod@redhat.com">Andrew MacLeod</a>,
 <a href="mailto:jason@redhat.com">Jason Merrill</a>,
 <a href="mailto:dnovillo@redhat.com">Diego Novillo</a>,
-<a href="mailto:s.pop@laposte.net">Sebastian Pop</a> and
-<a href="mailto:graham.stott@btinternet.com">Graham Stott</a>.</p>
+<a href="mailto:s.pop@laposte.net">Sebastian Pop</a>,
+<a href="mailto:graham.stott@btinternet.com">Graham Stott</a>,
+<a href="mailto:jsturm@one-point.com"Jeff Sturm</a> and 
+<a href="mailto:aph@redhat.com">Andrew Haley</a>.</p>
 
 <hr />
 <h3><a name="stability">Branch stability</a></h3>
@@ -296,8 +298,10 @@ different passes are welcome.</p>
     addressed.</dd>
 <dt><em>Add parse tree to GENERIC translation passes to front ends</em></dt>
 <dd>From the front ends that generate function-as-trees, only the C
-    and C++ front ends have a genericize pass.  Java and Obj-C are up
-    for grabs.</dd>
+    and C++ front ends have a genericize pass.  
+    <a href="mailto:jsturm@one-point.com"Jeff Sturm</a> and 
+    <a href="mailto:aph@redhat.com">Andrew Haley</a> are working on
+    Java.</dd>
 <dt><em>Tune RTL expanders to the subset of trees used by GIMPLE</em></dt>
 <dd>This is best illustrated with an example.  In GIMPLE all loops are
     LOOP_EXPRs, a kind of tree node that was not produced by the C
