--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -75,7 +75,7 @@ needed when submitting patches from the branch onto the mainline.</p>
 <a href="mailto:dnovillo@redhat.com">Diego Novillo</a>,
 <a href="mailto:s.pop@laposte.net">Sebastian Pop</a>,
 <a href="mailto:graham.stott@btinternet.com">Graham Stott</a>,
-<a href="mailto:jsturm@one-point.com"Jeff Sturm</a> and 
+<a href="mailto:jsturm@one-point.com">Jeff Sturm</a> and 
 <a href="mailto:aph@redhat.com">Andrew Haley</a>.</p>
 
 <hr />
@@ -299,7 +299,7 @@ different passes are welcome.</p>
 <dt><em>Add parse tree to GENERIC translation passes to front ends</em></dt>
 <dd>From the front ends that generate function-as-trees, only the C
     and C++ front ends have a genericize pass.  
-    <a href="mailto:jsturm@one-point.com"Jeff Sturm</a> and 
+    <a href="mailto:jsturm@one-point.com">Jeff Sturm</a> and 
     <a href="mailto:aph@redhat.com">Andrew Haley</a> are working on
     Java.</dd>
 <dt><em>Tune RTL expanders to the subset of trees used by GIMPLE</em></dt>
