--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -80,7 +80,7 @@ Information page</a>.</p>
 <p>In 1990/1991 gcc version 1 had reached a point of stability.  For the
 targets it could support, it worked well.  It had limitations inherent in
 its design that would be difficult to resolve, so a major effort was made
-to resolve those limitiations and gcc version 2 was the result.</p>
+to resolve those limitations and gcc version 2 was the result.</p>
 
 <p>When we had gcc2 in a useful state, development efforts on gcc1 stopped
 and we all concentrated on making gcc2 better than gcc1 could ever be.  This
