--- a/htdocs/projects/ast-optimizer.html
+++ b/htdocs/projects/ast-optimizer.html
@@ -49,7 +49,7 @@ and stability of optimizers.</p>
 
 <p>A number of optimizations can be tuned by various parameters. Giving
 the user a knob to twiddle is good, provided (a) it does something (b)
-there is a measureable way of determining its effectiveness.</p>
+there is a measurable way of determining its effectiveness.</p>
 
 <h3>Move RTL optimizations to the AST level</h3>
 
