--- a/htdocs/projects/prefetch.html
+++ b/htdocs/projects/prefetch.html
@@ -686,7 +686,7 @@ by the <em>fcn</em> field:</p>
 <tr>
   <td>0</td>
   <td>prefetch for several reads</td>
-  <td>Move the data into the cache nearest the processor (high degreee of
+  <td>Move the data into the cache nearest the processor (high degree of
       temporal locality).</td>
 </tr>
 <tr>
