--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -16,7 +16,7 @@ the project adheres to its fundamental principles found in the project's
 <a href="gccmission.html">mission statement</a>.  [see the original
 announcement below].</p>
 
-<p>In April 1999 the steering commitee was appointed by the FSF as the
+<p>In April 1999 the steering committee was appointed by the FSF as the
 official GNU maintainer for GCC and changed its name to GCC steering
 committee.</p>
 
