--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -108,7 +108,7 @@ names.
  </li>
  
  <li>h8300
-   <br />Manufacturer: Hitachi
+   <br />Manufacturer: Renesas
    <br />Exact chip name: H8/300
    <br />GDB includes a simulator.
  </li>
@@ -238,7 +238,7 @@ names.
  </li>
  
  <li>sh
-  <br />Manufacturer: Hitachi
+  <br />Manufacturer: Renesas
   <br />Exact chip name: SuperH
   <br /><a href="http://www.superh.com/">SuperH Home Page</a>
   <br />GDB includes a simulator.
