--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2003-06-16.
+2003-06-17.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -132,11 +132,15 @@ differences are currently required.</p>
 <tr> <td>javax.swing.UIManager</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.UIManager.diff">Diff</a></td> </tr>
 <tr> <td>javax.swing.border.AbstractBorder</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.border.AbstractBorder.diff">Diff</a></td> </tr>
 <tr> <td>javax.swing.border.BevelBorder</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.border.BevelBorder.diff">Diff</a></td> </tr>
+<tr> <td>javax.swing.border.Border</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.border.Border.diff">Diff</a></td> </tr>
 <tr> <td>javax.swing.border.CompoundBorder</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.border.CompoundBorder.diff">Diff</a></td> </tr>
 <tr> <td>javax.swing.border.EmptyBorder</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.border.EmptyBorder.diff">Diff</a></td> </tr>
 <tr> <td>javax.swing.border.EtchedBorder</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.border.EtchedBorder.diff">Diff</a></td> </tr>
 <tr> <td>javax.swing.border.LineBorder</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.border.LineBorder.diff">Diff</a></td> </tr>
+<tr> <td>javax.swing.border.MatteBorder</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.border.MatteBorder.diff">Diff</a></td> </tr>
+<tr> <td>javax.swing.border.SoftBevelBorder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.swing.border.TitledBorder</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.border.TitledBorder.diff">Diff</a></td> </tr>
+<tr> <td>javax.swing.plaf.BorderUIResource</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.plaf.BorderUIResource.diff">Diff</a></td> </tr>
 <tr> <td>javax.xml.parsers.ClassStuff</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.xml.parsers.DocumentBuilder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.xml.parsers.DocumentBuilderFactory</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
