--- a/htdocs/simtest-howto.html
+++ b/htdocs/simtest-howto.html
@@ -218,7 +218,7 @@ make check-gcc RUNTESTFLAGS=--target_board=arm-sim
 <tr valign="top">
  <td>mn10300-elf</td>
  <td>mn10300-sim</td>
- <td>cc0 target, little endian (obsolete after 3.3)</td>
+ <td>cc0 target, little endian</td>
  <td>
  <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00632.html">3.3 20030509 (prerelease)</a>
  <br />
