Document addition of support for Intel's iWMMXt ARM architecture.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -83,6 +83,11 @@
 <h2>New Targets and Target Specific Improvements</h2>
 
   <ul>
+    <li>Support for the Intel's iWMMXt architecture, a second
+    generation XScale processor, has been addded to the ARM port.
+    Enabled at run time with the <code>-mcpu=iwmmxt</code> command
+    line switch.</li>
+    
     <li>A new ARM target has been added: <code>arm-wince-pe</code>.  This is
     similar to the arm-pe target, but it defaults to using the APCS32
     ABI.</li>
